*add title and subtitle *nice number formatting on numeric axes (not sure if toLocaleString is widely supported.) *change font style to size, family instead of string *added ratio to canvas preferred size.

--- a/src/chart/todo
+++ b/src/chart/todo
@@ -1,14 +1,16 @@
--fix tiny ticks on strange aspect ratio's.
 -implement preferred size for all components.
 -implement insets for all components
--change font style to size, family instead of string
+-category axes with opposite axis not starting at zero
 -reduce code duplication in axis drawing code.
 -move canvas beginViewport/endViewport outside of axes drawing code
 -implement polar axes.
--add title and subtitle
 -see if color can be moved into stroke and fill
 -add legend
 -test composite chart
++add title and subtitle
++nice number formatting on numeric axes (not sure if toLocaleString is widely supported.)
++change font style to size, family instead of string
++added ratio to canvas preferred size.
 +figure out what to do when one (or both) of the axes do not start at zero (implemented.)
 +filtered minor ticks with major ticks removing duplicates
 +calculate minimum and maximum canvas size correctly.
