--- a/src/chart/todo
+++ b/src/chart/todo
@@ -1,11 +1,12 @@
 -look into labels for numeric axes
 -implement preferred size for all components.
--implement insets for all components
 -reduce code duplication in axis drawing code.
--move canvas beginViewport/endViewport outside of axes drawing code
 -implement polar axes.
 -add legend
 -test composite chart
++implemented insets for all components
++moved canvas beginViewport/endViewport outside of axes drawing code
++cleaned up canvas code a bit
 +fixed category axis with numbers
 +added colors from default to canvas
 +fixed category axes with opposite axis not starting at zero (labels were hanging, which might be inconvenient).
